--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,4 +2,12 @@ html, body{
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 1s ease-out 0.5s;
+}
+.main-wrapper{
+  width: 100%
 }
